--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "./promise_sync": "./dist/promise_sync.js"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "jest-test": "jest"
     },
     "keywords": [
         "bluewedge",
